--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -6,16 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="CrossReferenceNumber.cs" />
-    <Compile Remove="RiskAssessmentAttachment.cs" />
-    <Compile Remove="RiskRange.cs" />
-    <Compile Remove="VesselName.cs" />
-    <Compile Remove="VoCReporter.cs" />
-    <Compile Remove="VoCRiskScore.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
