Details page - Missing program years

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -2,7 +2,6 @@
   "App": {
     "ApiEndpoint": "https://localhost:44353/"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebContext": "Server=(localdb)\\mssqllocaldb;Database=WebContext-60b0376b-7cb2-44bc-94ae-3bb660987848;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
